--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -52,7 +52,7 @@ File: Responsive
     margin: 0%;
     width: 100%;
   }
-  .navbar-nav .open .dropdown-menu {
+  .navbar-nav .open {
     background-color: #ffffff;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     left: auto;
